--- a/emploee/appsettings.json
+++ b/emploee/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefultConnection": "Server=LAPTOP-BFFJ9SQ9;Database=course;Trusted_Connection=True"
+    "DefultConnection": "Server=DESKTOP-JD76U9C;Database=course;Trusted_Connection=True"
   },
   "Logging": {
     "LogLevel": {
